# sdo-apple

./: .gitignore  GraphQLAPI.swift  Podfile  README.md  SDO--iOS--Info.plist  SDOTests.xctestplan  Tests iOS.xctestplan  azure-pipelines.yml
SDO.xcodeproj/: project.pbxproj
SDO.xcworkspace/: contents.xcworkspacedata
SDOTests/: ChannelDataTests.swift  GetChannelsDataUseCaseTests.swift  GetHomeScreenDataUseCaseTests.swift  GetVideoDetailDataUseCaseTests.swift  GetVideosOfSearchParametersUseCaseTests.swift  KitchenSinkViewTests.swift  SDOTests.swift  UpdateVideoLikeDislikeStatusUseCaseTests.swift
Shared/: ContentView.swift  SDOApp.swift
Shared/Application/: AppDelegate.swift  SDOApp.swift
Shared/SupportFiles/: AnalyticsConstants.swift  ApiConstants.swift  Extensions.swift  GoogleService-Info.plist  (+1 more)
Tests iOS/: DeleteAllUserDataUseCaseTests.swift  FilterChannelsUseCaseTests.swift  GetAllLanguagesUseCaseTests.swift  GetAppleIdRefreshTokenUseCaseTests.swift  GetChannelDetailDataUseCaseTests.swift  GetChannelsDataUseCaseTests.swift  GetHomeScreenDataUseCaseTests.swift  GetUserDataUseCaseTests.swift  GetVideoDetailDataUseCaseTests.swift  GetVideosOfSearchParametersUseCaseTests.swift  RevokeAppleIdRefreshTokenUseCaseTests.swift  Tests_iOS.swift  Tests_iOSLaunchTests.swift  UpdateVideoLikeDislikeStatusUseCaseTests.swift
Tests macOS/: Tests_macOS.swift  Tests_macOSLaunchTests.swift
code-indexing/: .env  main.py  pyproject.toml
code-indexing/code_embedding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
iOS/: AppTabNavigation.swift
macOS/: NotAvailableView.swift
(+211 files in other folders)
